move null checks into using blocks

--- a/FlashpointSecurePlayer/Properties/Resources.resx
+++ b/FlashpointSecurePlayer/Properties/Resources.resx
@@ -194,7 +194,7 @@ If you choose No, the application will exit.</value>
     <value>The CPU's clock speed could not be determined.</value>
   </data>
   <data name="OCS_NoMultipleInstances" xml:space="preserve">
-    <value>You must not run multiple instances of Old CPU Simulator.</value>
+    <value>You cannot run multiple instances of Old CPU Simulator.</value>
   </data>
   <data name="OCS_OldCPUNotSimulated" xml:space="preserve">
     <value>The old CPU could not be simulated.</value>
